Style and complete first page for appointments booking

--- a/appointment.html
+++ b/appointment.html
@@ -233,91 +233,116 @@
             <img src="./images/black-default-bg.png" alt="black-default-bg" class="black-default-bg">
 
             <!-- PAGE HEADING-->
-            <section class="section p-t-100 p-b-65">
+            <section class="section p-t-150">
                 <div class="container">
-                    <div class="page-heading">
-                        <h2 class="title-2">MAKE AN APPOINTMENT</h2>
+                    <div class="page-heading p-b-90">
+                        <h2 class="title-2 text-center">MAKE AN APPOINTMENT</h2>
+                    </div>
+                    <div class="row p-b-40">
+                        <div class="col-sm-6 p-l-0 p-r-0">
+                            <h5 class="appt-step-1 p-t-20" >1. Services required</h5>
+                        </div>
+                        <div class="col-sm-6 p-l-0 p-r-0">
+                            <h5 class="appt-step-2 p-t-20" id="262D33x" >2. Contact Information</h5>
+                        </div>
                     </div>
                 </div>
             </section>
             <!-- END PAGE HEADING-->
 
             <!-- APPOINTMENT-->
-            <section class="section p-b-80">
-                <div class="container">
-                    <div class="container">
-                        <div>
-                            <h5>1. Services required</h5>
-                            <h5>2. Date and Time</h5>
-                            <h5>3. Contact Information</h5>
-                        </div>
-
-                        <!-- <div class="form-step-one">
-                            <h2> 1. Briefly describe your HVAC needs</h2>
-
-                            <select id="service" name="service">    
-                                <option value="">Which service do you need?</option>
-                                <option value="repair">Repair</option>
-                                <option value="maintenance">Maintenance</option>
-                                <option value="installation">Installation</option>
-                            </select>
-
-                            <input type="checkbox" id="free-assessment" name="free-assessment">
-                            <label for="free-assessment">Not sure. I would like a free assessment</label>
-
-                            <textarea id="details" name="details" placeholder="Details (Optional)"></textarea>
-
-                            <input type="submit" value="Next">
-                        </div> -->
-
-                        <div class="form-step-two">
-                            <h2> 2. Date and Time of Free Assessment</h2>
-
-                            <div id="calendar">
-                                <h6>Select Date:</h6>
-                                <div class="header highlighted">
-                                  <span id="prev" class="arrow">&#60;</span>
-                                  <span id="month-year"></span>
-                                  <span id="next" class="arrow">&#62;</span>
-                                </div>
-                                <div class="weekdays">
-                                  <div>Sun</div>
-                                  <div>Mon</div>
-                                  <div>Tue</div>
-                                  <div>Wed</div>
-                                  <div>Thu</div>
-                                  <div>Fri</div>
-                                  <div>Sat</div>
-                                </div>
-                                <div id="days" class="days">
-                                  <!-- Days will be populated by JavaScript -->
+            <section class="section p-b-100">
+                <!-- <div class="container">
+                        <div class="form-step-one">
+                            <div class="row p-b-20">
+                                <div class="col-sm-12 form-step-one">
+                                    <h3 class="title-10"> <span class="rounded-circle">1</span>  Briefly describe your HVAC needs</h3>
                                 </div>
                             </div>
 
-                            <div class="time-picker">
-                                <div class="time-slot" tabindex="0">09:00 AM</div>
-                                <div class="time-slot" tabindex="0">09:30 AM</div>
-                                <div class="time-slot" tabindex="0">10:00 AM</div>
-                                <div class="time-slot" tabindex="0">10:30 AM</div>
-                                <div class="time-slot" tabindex="0">11:00 AM</div>
-                                <div class="time-slot" tabindex="0">11:30 AM</div>
-                                <div class="time-slot" tabindex="0">12:00 PM</div>
-                                <div class="time-slot" tabindex="0">12:30 PM</div>
-                                <div class="time-slot" tabindex="0">01:00 PM</div>
-                                <div class="time-slot" tabindex="0">01:30 PM</div>
-                                <div class="time-slot" tabindex="0">02:00 PM</div>
-                                <div class="time-slot" tabindex="0">02:30 PM</div>
-                                <div class="time-slot" tabindex="0">03:00 PM</div>
-                                <div class="time-slot" tabindex="0">03:30 PM</div>
-                                <div class="time-slot" tabindex="0">04:00 PM</div>
-                                <div class="time-slot" tabindex="0">04:30 PM</div>
-                                <div class="time-slot" tabindex="0">05:00 PM</div>
-                                <div class="time-slot" tabindex="0">05:30 PM</div>
-                              </div>
-                              
+                            <div class="row p-t-20 p-b-20">
+                                <div class="col-sm-12 col-md-6">
+                                    <select class="appt rounded" id="service" name="service">    
+                                        <option value="">Which service do you need?</option>
+                                        <option value="repair">Repair</option>
+                                        <option value="maintenance">Maintenance</option>
+                                        <option value="installation">Installation</option>
+                                    </select>
+                                </div>
+
+                                <div class="col-sm-12 col-md-6">
+                                    <div class="row">
+                                        <div class="col-sm-1 p-r-0">
+                                            <input type="checkbox" id="free-assessment" name="free-assessment">
+                                        </div>
+                                        <div class="col-sm-11">
+                                            <label for="free-assessment">Not sure. I would like a free assessment</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <textarea class="appt" id="details" name="details" placeholder="Details (Optional)" rows="4"></textarea>
+                                </div>
+                            </div>
+
+                            <div class="row p-t-20">
+                                <div class="col-sm-6 col-md-9"></div>
+                                <div class="col-sm-6 col-md-3">
+                                    <input class="appt-next" type="submit" value="Next">
+                                </div>
+                            </div>
                         </div>
+
                         
+                </div> -->
+
+                <div class="container">
+                    <div class="form-step-one">
+                        <div class="row p-b-20">
+                            <div class="col-sm-12 form-step-one">
+                                <h3 class="title-10"> <span class="rounded-circle">1</span>  Briefly describe your HVAC needs</h3>
+                            </div>
+                        </div>
+
+                        <div class="row p-t-20 p-b-20">
+                            <div class="col-sm-12 col-md-6">
+                                <select class="appt rounded" id="service" name="service">    
+                                    <option value="">Which service do you need?</option>
+                                    <option value="repair">Repair</option>
+                                    <option value="maintenance">Maintenance</option>
+                                    <option value="installation">Installation</option>
+                                </select>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-sm-1 p-r-0">
+                                        <input type="checkbox" id="free-assessment" name="free-assessment">
+                                    </div>
+                                    <div class="col-sm-11">
+                                        <label for="free-assessment">Not sure. I would like a free assessment</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <textarea class="appt" id="details" name="details" placeholder="Details (Optional)" rows="4"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="row p-t-20">
+                            <div class="col-sm-6 col-md-9"></div>
+                            <div class="col-sm-6 col-md-3">
+                                <input class="appt-next" type="submit" value="Next">
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </section>
             <!-- END APPOINTMENT-->
@@ -483,7 +508,7 @@
     <script src="js/config-contact.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZpvUGmm_OZAW0utJ5uiP79_LLWQPRXsA"></script>
     <script src="js/theme-map.js"></script>
-    <script src="js/config-datepicker.js"></script>
+
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
