--- a/appointment.html
+++ b/appointment.html
@@ -256,7 +256,7 @@
                         <div class="form-step-one">
                             <div class="row p-b-20">
                                 <div class="col-sm-12 form-step-one">
-                                    <h3 class="title-10"> <span class="rounded-circle">1</span>  Briefly describe your HVAC needs</h3>
+                                    <h3 class="title-10"> <span class="rounded-circle">1</span> Briefly describe your HVAC needs</h3>
                                 </div>
                             </div>
 
@@ -303,8 +303,30 @@
                     <div class="form-step-one">
                         <div class="row p-b-20">
                             <div class="col-sm-12 form-step-one">
-                                <h3 class="title-10"> <span class="rounded-circle">1</span>  Briefly describe your HVAC needs</h3>
+                                <h3 class="title-10"> <span class="rounded-circle">2</span> Contact Information</h3>
                             </div>
+                        </div>
+
+                        <div class="row p-t-20 p-b-20">
+                            <div class="col-sm-12 col-md-6">
+                                <input class="au-input" type="text" name="fname" placeholder="First Name" required="required">
+                                <input class="au-input" type="text" name="lname" placeholder="Last Name" required="required">
+                                <input class="au-input" type="email" name="email" placeholder="Email Address" required="required" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+                                <input class="au-input" type="text" name="city" placeholder="City/Town" required="required">
+                            </div>
+                            
+                            <div class="col-sm-12 col-md-6">
+                                <input class="au-input" type="text" name="fname" placeholder="Postal Code" required="required">
+                                <input type="checkbox" id="free-assessment" name="free-assessment">
+                                <input class="au-input" type="text" name="phone" placeholder="Phone" required="required">
+                                <select class="appt rounded" id="reference" name="reference">    
+                                    <option value="">How did you hear about us?</option>
+                                    <option value="repair">Repair</option>
+                                    <option value="maintenance">Maintenance</option>
+                                    <option value="installation">Installation</option>
+                                </select>
+                                <span><label for="free-assessment">Not sure. I would like a free assessment</label></span>
+
                         </div>
 
                         <div class="row p-t-20 p-b-20">
