Style appointment form

--- a/appointment.html
+++ b/appointment.html
@@ -241,9 +241,10 @@
                     <div class="row p-b-40">
                         <div class="col-sm-6 p-l-0 p-r-0">
                             <h5 class="appt-step-1 p-t-20" >1. Services required</h5>
+                            <h6 class="appt-step-1-values p-t-10"></h6>
                         </div>
                         <div class="col-sm-6 p-l-0 p-r-0">
-                            <h5 class="appt-step-2 p-t-20" id="262D33x" >2. Contact Information</h5>
+                            <h5 class="appt-step-2 p-t-20" >2. Contact Information</h5>
                         </div>
                     </div>
                 </div>
@@ -271,9 +272,9 @@
                                     <div class="col-sm-12 col-md-6">
                                         <select class="appt rounded" id="service" name="service">    
                                             <option value="">Which service do you need?</option>
-                                            <option value="repair">Repair</option>
-                                            <option value="maintenance">Maintenance</option>
-                                            <option value="installation">Installation</option>
+                                            <option value="Repair">Repair</option>
+                                            <option value="Maintenance">Maintenance</option>
+                                            <option value="Installation">Installation</option>
                                         </select>
                                     </div>
 
