Style footer for mobile responsiveness:

--- a/appointment.html
+++ b/appointment.html
@@ -395,7 +395,7 @@
         <footer class="footer bg-parallax">
             <div class="bg-overlay bg-overlay--p85"></div> 
             <div class="container">
-                <div class="row">
+                <div class="row footer-pad">
                     <div class="col-lg-1 col-md-1">
                         <div class="footer-col">
                             <div class="widget m-t-10">
