--- a/appointment.html
+++ b/appointment.html
@@ -298,14 +298,14 @@
 
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <textarea class="appt" id="details" name="details" placeholder="Details (Optional)" rows="4"></textarea>
+                                        <textarea class="appt" id="details" name="details" placeholder="Details (Optional)" rows="6"></textarea>
                                     </div>
                                 </div>
 
                                 <div class="row p-t-20">
-                                    <div class="col-sm-6 col-md-11"></div>
-                                    <div class="col-sm-6 col-md-1">
-                                        <button class="appt-next p-l-20" id="next-button" type="button">Next</button>
+                                    <div class="col-sm-6 col-md-9"></div>
+                                    <div class="col-sm-6 col-md-3">
+                                        <button class="appt-next" id="next-button" type="button">Next</button>
                                     </div>
                                 </div>
                             </div>
@@ -372,13 +372,13 @@
                             </div>
 
                             <div class="row p-t-20">
-                                <div class="col-sm-6 col-md-10"></div>
+                                <div class="col-sm-6 col-md-9"></div>
 
                                 <div class="col-sm-6 col-md-1" id="back-button-div">
                                     <button class="appt-next p-l-20" id="back-button" type="button">Back</button>
                                 </div>
 
-                                <div class="col-sm-6 col-md-1" id="submit-button-div">
+                                <div class="col-sm-6 col-md-2" id="submit-button-div">
                                     <input class="appt-next" type="submit" value="Submit">
                                 </div>
                             </div>
@@ -409,7 +409,7 @@
                         <h4 id="subscribe-message">Keep up with the latest in <span>HVAC</span></h4>
                     </div>
                     <div class="col-lg-7" >
-                        <div class="row">
+                        <div class="row subscribe-form">
                             <form class="form-subscribe js-subcribe-form" method="POST" action="#">
                                 <div class="form-row no-gutters">
                                     <div class="col-md">
@@ -427,12 +427,12 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="row">
+                        <div class="row subscribe-button-message">
                             <h6 id="subscribe-button-message">We promise to keep our communications short and limited</h6>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row footer-nav">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-col p-l-60 p-md-l-0">
                             <div class="widget widget_pages">
