--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@
         <footer class="footer bg-parallax">
             <div class="bg-overlay bg-overlay--p85"></div> 
             <div class="container">
-                <div class="row">
+                <div class="row footer-pad">
                     <div class="col-lg-1 col-md-1">
                         <div class="footer-col">
                             <div class="widget m-t-10">
@@ -308,7 +308,7 @@
                         <h4 id="subscribe-message">Keep up with the latest in <span>HVAC</span></h4>
                     </div>
                     <div class="col-lg-7" >
-                        <div class="row">
+                        <div class="row subscribe-form">
                             <form class="form-subscribe js-subcribe-form" method="POST" action="#">
                                 <div class="form-row no-gutters">
                                     <div class="col-md">
@@ -326,12 +326,12 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="row">
+                        <div class="row subscribe-button-message">
                             <h6 id="subscribe-button-message">We promise to keep our communications short and limited</h6>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row footer-nav">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-col p-l-60 p-md-l-0">
                             <div class="widget widget_pages">
