--- a/heating.html
+++ b/heating.html
@@ -371,143 +371,143 @@
 
                 
                 <!-- FOOTER-->
-            <footer class="footer bg-parallax">
-                <div class="bg-overlay bg-overlay--p85"></div> 
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-1 col-md-1">
-                            <div class="footer-col">
-                                <div class="widget m-t-10">
-                                    <a href="index.html">
-                                        <img src="images/pls_white_logo.png" alt="pls-mechanical" />
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6">
-                            <h4 id="subscribe-message">Keep up with the latest in <span>HVAC</span></h4>
-                        </div>
-                        <div class="col-lg-7" >
-                            <div class="row">
-                                <form class="form-subscribe js-subcribe-form" method="POST" action="#">
-                                    <div class="form-row no-gutters">
-                                        <div class="col-md">
-                                            <input class="au-input" id="subscribe-inputs" type="text" name="name" placeholder="First Name" required="required">
-                                        </div>
-                                        <div class="col-md">
-                                            <input class="au-input" id="subscribe-inputs" type="text" name="name" placeholder="Last Name" required="required">
-                                        </div>
-                                        <div class="col-md">
-                                            <input class="au-input" id="subscribe-inputs" type="email" name="email" placeholder="Email Address" required="required" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
-                                        </div>
-                                        <div class="col-md p-r-0">
-                                            <button class="au-btn au-btn--solid" id="subscribe-btn" type="submit">Subscribe</button>
-                                        </div>
+                <footer class="footer bg-parallax">
+                    <div class="bg-overlay bg-overlay--p85"></div> 
+                    <div class="container">
+                        <div class="row footer-pad">
+                            <div class="col-lg-1 col-md-1">
+                                <div class="footer-col">
+                                    <div class="widget m-t-10">
+                                        <a href="index.html">
+                                            <img src="images/pls_white_logo.png" alt="pls-mechanical" />
+                                        </a>
                                     </div>
-                                </form>
+                                </div>
                             </div>
-                            <div class="row">
-                                <h6 id="subscribe-button-message">We promise to keep our communications short and limited</h6>
+                            <div class="col-lg-4 col-md-6">
+                                <h4 id="subscribe-message">Keep up with the latest in <span>HVAC</span></h4>
+                            </div>
+                            <div class="col-lg-7" >
+                                <div class="row subscribe-form">
+                                    <form class="form-subscribe js-subcribe-form" method="POST" action="#">
+                                        <div class="form-row no-gutters">
+                                            <div class="col-md">
+                                                <input class="au-input" id="subscribe-inputs" type="text" name="name" placeholder="First Name" required="required">
+                                            </div>
+                                            <div class="col-md">
+                                                <input class="au-input" id="subscribe-inputs" type="text" name="name" placeholder="Last Name" required="required">
+                                            </div>
+                                            <div class="col-md">
+                                                <input class="au-input" id="subscribe-inputs" type="email" name="email" placeholder="Email Address" required="required" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+                                            </div>
+                                            <div class="col-md p-r-0">
+                                                <button class="au-btn au-btn--solid" id="subscribe-btn" type="submit">Subscribe</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="row subscribe-button-message">
+                                    <h6 id="subscribe-button-message">We promise to keep our communications short and limited</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row footer-nav">
+                            <div class="col-lg-3 col-md-6">
+                                <div class="footer-col p-l-60 p-md-l-0">
+                                    <div class="widget widget_pages">
+                                        <h4 class="widget-title">Services</h4>
+                                        <ul>
+                                            <li>
+                                                <a href="heating.html">Heating</a>
+                                            </li>
+                                            <li>
+                                                <a href="cooling.html">Cooling</a>
+                                        </li>
+                                            <li>
+                                                <a href="indoor-air-quality.html">Indoor Air Quality</a>
+                                            </li>
+                                            <li>
+                                                <a href="maintenance.html">Maintenance</a>
+                                            </li>
+                                            <li>
+                                                <a href="commercial.html">Commercial</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="footer-col p-l-20 p-md-l-0">
+                                    <div class="widget widget_pages">
+                                        <h4 class="widget-title">Useful Links</h4>
+                                        <ul>
+                                            <li>
+                                                <a href="about-us.html">About us</a>
+                                            </li>
+                                            <li>
+                                                <a href="contact.html">Contact</a>
+                                            </li>
+                                            <li>
+                                                <a href="privacy-policy.html">Privacy Policy</a>
+                                            </li>
+                                            <li>
+                                                <a href="terms-of-service.html">Terms of Service</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="footer-col p-l-0 p-md-l-0">
+                                    <div class="widget widget-address">
+                                        <h4 class="widget-title">Contact</h4>
+                                        <ul>
+                                            <li>2300 Marcus Ave, Lake Success, NY 11042</li>
+                                            <li>9AM -6PM Mon - Sat</li>
+                                            <li>+ (516) 697-6100</li>
+                                            <li>info@plsmechanical.com</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="footer-col p-l-10 p-md-l-0">
+                                    <h4 class="widget-title">Social</h4>
+                                    <div class="widget widget_socials">
+                                        <ul class="list-social list-social-2">
+                                            <li class="list-social__item">
+                                                <a class="ic-fb" href="#">
+                                                    <i class="zmdi zmdi-facebook"></i>
+                                                </a>
+                                            </li>
+                                            <li class="list-social__item">
+                                                <a class="ic-insta" href="#">
+                                                    <i class="zmdi zmdi-instagram"></i>
+                                                </a>
+                                            </li>
+                                            <li class="list-social__item">
+                                                <a class="ic-twi" href="#">
+                                                    <i class="zmdi zmdi-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li class="list-social__item">
+                                                <a class="ic-pinterest" href="#">
+                                                    <i class="zmdi zmdi-youtube-play"></i>
+                                                </a>
+                                            </li>
+                                            <li class="list-social__item">
+                                                <a class="ic-linkedin" href="#">
+                                                    <i class="zmdi zmdi-linkedin"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6">
-                            <div class="footer-col p-l-60 p-md-l-0">
-                                <div class="widget widget_pages">
-                                    <h4 class="widget-title">Services</h4>
-                                    <ul>
-                                        <li>
-                                            <a href="heating.html">Heating</a>
-                                        </li>
-                                        <li>
-                                            <a href="cooling.html">Cooling</a>
-                                    </li>
-                                        <li>
-                                            <a href="indoor-air-quality.html">Indoor Air Quality</a>
-                                        </li>
-                                        <li>
-                                            <a href="maintenance.html">Maintenance</a>
-                                        </li>
-                                        <li>
-                                            <a href="commercial.html">Commercial</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="footer-col p-l-20 p-md-l-0">
-                                <div class="widget widget_pages">
-                                    <h4 class="widget-title">Useful Links</h4>
-                                    <ul>
-                                        <li>
-                                            <a href="about-us.html">About us</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact</a>
-                                        </li>
-                                        <li>
-                                            <a href="privacy-policy.html">Privacy Policy</a>
-                                        </li>
-                                        <li>
-                                            <a href="terms-of-service.html">Terms of Service</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="footer-col p-l-0 p-md-l-0">
-                                <div class="widget widget-address">
-                                    <h4 class="widget-title">Contact</h4>
-                                    <ul>
-                                        <li>2300 Marcus Ave, Lake Success, NY 11042</li>
-                                        <li>9AM -6PM Mon - Sat</li>
-                                        <li>+ (516) 697-6100</li>
-                                        <li>info@plsmechanical.com</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="footer-col p-l-10 p-md-l-0">
-                                <h4 class="widget-title">Social</h4>
-                                <div class="widget widget_socials">
-                                    <ul class="list-social list-social-2">
-                                        <li class="list-social__item">
-                                            <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
-                                                <i class="zmdi zmdi-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-social__item">
-                                            <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
-                                                <i class="zmdi zmdi-instagram"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-social__item">
-                                            <a class="ic-twi" href="https://twitter.com/PLSMechanical">
-                                                <i class="zmdi zmdi-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-social__item">
-                                            <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
-                                                <i class="zmdi zmdi-youtube-play"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-social__item">
-                                            <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
-                                                <i class="zmdi zmdi-linkedin"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- END FOOTER-->
+                </footer>
+                <!-- END FOOTER-->
             </section>
             <!-- END SECTION-->
         </div>
