--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -310,7 +310,7 @@
         <footer class="footer bg-parallax">
             <div class="bg-overlay bg-overlay--p85"></div> 
             <div class="container">
-                <div class="row">
+                <div class="row footer-pad">
                     <div class="col-lg-1 col-md-1">
                         <div class="footer-col">
                             <div class="widget m-t-10">
@@ -324,7 +324,7 @@
                         <h4 id="subscribe-message">Keep up with the latest in <span>HVAC</span></h4>
                     </div>
                     <div class="col-lg-7" >
-                        <div class="row">
+                        <div class="row subscribe-form">
                             <form class="form-subscribe js-subcribe-form" method="POST" action="#">
                                 <div class="form-row no-gutters">
                                     <div class="col-md">
@@ -342,12 +342,12 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="row">
+                        <div class="row subscribe-button-message">
                             <h6 id="subscribe-button-message">We promise to keep our communications short and limited</h6>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row footer-nav">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-col p-l-60 p-md-l-0">
                             <div class="widget widget_pages">
@@ -412,27 +412,27 @@
                             <div class="widget widget_socials">
                                 <ul class="list-social list-social-2">
                                     <li class="list-social__item">
-                                        <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
+                                        <a class="ic-fb" href="#">
                                             <i class="zmdi zmdi-facebook"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
+                                        <a class="ic-insta" href="#">
                                             <i class="zmdi zmdi-instagram"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-twi" href="https://twitter.com/PLSMechanical">
+                                        <a class="ic-twi" href="#">
                                             <i class="zmdi zmdi-twitter"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
+                                        <a class="ic-pinterest" href="#">
                                             <i class="zmdi zmdi-youtube-play"></i>
                                         </a>
                                     </li>
                                     <li class="list-social__item">
-                                        <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                        <a class="ic-linkedin" href="#">
                                             <i class="zmdi zmdi-linkedin"></i>
                                         </a>
                                     </li>
